force-app/main/default/objects/Research_Output__c/fields/I_RS_Title_Short__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Title_Short__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>