force-app/main/default/objects/Research_Output__c/fields/I_RS_Triadic__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Triadic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triadic</label>
    <type>Checkbox</type>
</CustomField>