force-app/main/default/objects/Research_Output__c/fields/I_RS_Word_Count__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Word_Count__c</fullName>
    <label>Word Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>