force-app/main/default/objects/Research_Output__c/fields/I_RS_Year_Available__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_Available__c</fullName>
    <label>Year Available</label>
    <type>Date</type>
</CustomField>