force-app/main/default/objects/Research_Output__c/fields/I_RS_Year_Presented__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_Presented__c</fullName>
    <label>Year Presented</label>
    <type>Date</type>
</CustomField>