force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Applied_Measures.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Applied_Measures</fullName>
    <active>true</active>
    <label>Applied Measures</label>
</RecordType>