force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Book_2.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Book_2</fullName>
    <active>true</active>
    <label>Book - (A1)</label>
</RecordType>