force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Chapter_3.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Chapter_3</fullName>
    <active>true</active>
    <label>Chapter – (B)</label>
</RecordType>