force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Conference_Paper_4.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Conference_Paper_4</fullName>
    <active>true</active>
    <label>Conference Paper – (E1)</label>
</RecordType>