force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Curated_Public_Exhibition_Event_55.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Curated_Public_Exhibition_Event_55</fullName>
    <active>true</active>
    <label>Curated Public Exhibition/Event – (J5)</label>
</RecordType>