force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Journal_Article_5.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Journal_Article_5</fullName>
    <active>true</active>
    <label>Journal Article – (C1)</label>
</RecordType>