force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Live_Performance_of_a_Creative_Work_53.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Live_Performance_of_a_Creative_Work_53</fullName>
    <active>true</active>
    <label>Live Performance of a Creative Work – (J3)</label>
</RecordType>