force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Original_Creative_Work_52.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Original_Creative_Work_52</fullName>
    <active>true</active>
    <label>Original Creative Work –(J1)</label>
</RecordType>