force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Patents.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Patents</fullName>
    <active>false</active>
    <label>Patents</label>
</RecordType>