force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Portfolio</fullName>
    <active>true</active>
    <label>Portfolio</label>
</RecordType>