force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Recorded_Rendered_Creative_Work_54.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Recorded_Rendered_Creative_Work_54</fullName>
    <active>true</active>
    <label>Recorded/Rendered Creative Work – (J4)</label>
</RecordType>