force-app/main/default/objects/Research_Output__c/recordTypes/I_RS_Research_Report_51.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Research_Report_51</fullName>
    <active>true</active>
    <label>Research Report – (J6)</label>
</RecordType>