force-app/main/default/objects/Research_Output__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Journal__c</columns>
    <columns>I_RS_Conference__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Authors__c</columns>
    <columns>I_RS_Pagination_Count__c</columns>
    <columns>I_RS_Publication_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>