force-app/main/default/objects/Research_Output__c/listViews/All_with_RO_ERA_Eligible_True.listView-meta.xml
<ListView>
    <fullName>All_with_RO_ERA_Eligible_True</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Title__c</columns>
    <columns>I_RS_Journal__c</columns>
    <columns>I_RS_Conference__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>I_RS_Authors__c</columns>
    <columns>I_RS_Pagination_Count__c</columns>
    <columns>I_RS_Publication_date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_RO_ERA_Eligible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All with RO ERA Eligible True</label>
</ListView>